--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -120,3 +120,10 @@ table.search td{
 table.search p{
 	font-weight: bold;
 }
+
+table.weather {
+    background-color: orange;
+    color: white;
+    font-size: small;
+    font-weight: bold;
+}
